<resources>
    <string name="app_name">Tindeo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_text_button">Iniciar Sesión</string>
    <string name="login_text_field_email">Correo Electrónico</string>
    <string name="login_text_field_password">Contraseña</string>
    <string name="descripcion_logo">logo de la app tindeo</string>
    <string name="text_singUp">Crear Cuenta</string>
    <string name="text_acceder">Acceder</string>
    <string name="text_rol">Seleccione rol</string>
    <string name="rol_text_button">Registrarse</string>
    <string name="checkBox_text_cliente">Cliente</string>
    <string name="checkBox_text_tienda">Tienda</string>
    <string name="rol_radioButton_cliente">Cliente</string>
    <string name="rol_radioButton_tienda">Tienda</string>
    <string name="Register_Cli_Text_Nombre">Nombre</string>
    <string name="Register_Cli_Text_Apellidos">Apellidos</string>
    <string name="Register_Cli_Number_Celular">Celular</string>
    <string name="Register_Cli_Text_ConfirmPass">Confirmar contraseña</string>
    <string name="Register_Store_Text_NombreTienda">Nombre de la tienda</string>
    <string name="Register_Store_Text_Address">Dirección de la tienda</string>

    <string name="home_title">Mi tienda</string>
    <string name="product_title">Mis productos</string>
    <string name="comment_title">Opiniones de mi tienda</string>
    <string name="profile_title">Mi perfil</string>
    <string name="product_detail_title">Detalle del producto</string>
    <string name="add_comment_title">Agregar comentario</string>

    <string name="menu_tienda_label">Mi tienda</string>
    <string name="menu_productos_label">Productos</string>
    <string name="menu_opiniones_label">Opiniones</string>
    <string name="menu_perfil_label">Perfil</string>
    <string name="comment_tabs_todas">Todas</string>
    <string name="comment_tabs_positivas">Positivas</string>
    <string name="comment_tabs_negativas">Negativas</string>
    <string name="text_prom_rating">Promedio entre 130 opiniones</string>
    <string name="text_star_5">5 Estrellas</string>
    <string name="text_star_4">4 Estrellas</string>
    <string name="text_star_3">3 Estrellas</string>
    <string name="text_star_2">2 Estrellas</string>
    <string name="text_star_1">1 Estrellas</string>
    <string name="imageDescriptionLike">like</string>
    <string name="imageDescriptionUnlike">unlike</string>
    <string name="lorem_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="text_descripcion">Descripción</string>
    <string name="text_label_direccion">Dirección</string>
    <string name="imagen_de_la_tienda">Imagen de la tienda</string>
    <string name="text_button_addToCar">Agregar al carrito</string>
    <string name="product_disminuir">Disminuir</string>
    <string name="product_aumentar_producto">aumentar producto</string>
    <string name="logOut">Cerrar Sesión</string>
    <string name="default_quantity">1</string>
    <string name="Add_Comment">Agregar comentario</string>
    <string name="titulo">Titulo</string>
    <string name="agregar_comentario">Agregar comentario</string>
</resources>
