<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_store_24"
        android:title="@string/menu_tienda_label"
        />

    <item
        android:id="@+id/productFragment"
        android:enabled="true"
        android:icon="@drawable/ic_product_24"
        android:title="@string/menu_productos_label"
        />

    <item
        android:id="@+id/commentFragment"
        android:enabled="true"
        android:icon="@drawable/ic_comment_24"
        android:title="@string/menu_opiniones_label"
        />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/menu_perfil_label"
        />

</menu>