<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommentFragment">

    <RelativeLayout
        android:layout_marginVertical="@dimen/double_margin"
        android:id="@+id/relativeLayoutRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="32dp"

        >

        <TextView
            android:id="@+id/textNumberRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="4.9"
            android:textSize="50sp" />

        <LinearLayout
            android:id="@+id/layoutStarProm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/textNumberRating"
            >
            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4.8"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/textPromRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_prom_rating"
                android:textSize="@dimen/textSizeMin" />

        </LinearLayout>

<!--        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginVertical="@dimen/default_margin"
            android:contentDescription="icon match"
            app:tint="@color/teal_200"
            android:src="@drawable/ic_favorite_24" />-->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayoutRating"
        android:layout_marginHorizontal="@dimen/double_margin"
        android:layout_marginVertical="@dimen/double_margin"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_star_5"
                android:textSize="@dimen/textSizeNormal"
                android:layout_marginEnd="@dimen/default_margin"
                />

            <ProgressBar
                android:id="@+id/progressBar5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/default_margin"
                android:max="130"
                android:progress="119" />
            <TextView
                android:id="@+id/textCountStart5"
                android:layout_width="@dimen/widthTextStar"
                android:layout_height="wrap_content"
                android:text="119"
                android:textSize="@dimen/textSizeNormal"


                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_star_4"
                android:textSize="@dimen/textSizeNormal"
                android:layout_marginEnd="@dimen/default_margin"
                />

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:max="130"
                android:progress="9" />
            <TextView
                android:id="@+id/textCountStar4"
                android:layout_width="@dimen/widthTextStar"
                android:layout_height="wrap_content"
                android:text="9"
                android:textSize="@dimen/textSizeNormal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_star_3"
                android:textSize="@dimen/textSizeNormal"
                android:layout_marginEnd="@dimen/default_margin"
                />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:max="130"
                android:progress="1" />
            <TextView
                android:id="@+id/textCountStar3"
                android:layout_width="@dimen/widthTextStar"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="@dimen/textSizeNormal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_star_2"
                android:textSize="@dimen/textSizeNormal"
                android:layout_marginEnd="@dimen/default_margin"
                />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_weight="1"
                android:max="130"
                android:progress="0" />
            <TextView
                android:id="@+id/textCountStar2"
                android:layout_width="@dimen/widthTextStar"
                android:layout_height="wrap_content"
                android:text="0"
                android:textDirection="ltr"
                android:textSize="@dimen/textSizeNormal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_star_1"
                android:textSize="@dimen/textSizeNormal"
                android:layout_marginEnd="@dimen/default_margin"
                />

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:max="130"
                android:layout_weight="1"
                android:progress="1" />
            <TextView
                android:id="@+id/textCountStar1"
                android:layout_width="@dimen/widthTextStar"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="@dimen/textSizeNormal"
                />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/small_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_comment"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <!--<com.google.android.material.tabs.TabLayout
        android:id="@+id/commentTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutProgressBar"
        android:layout_marginTop="@dimen/double_margin"
        >
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_tabs_todas"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_tabs_positivas"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_tabs_negativas"
            />
    </com.google.android.material.tabs.TabLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout >