<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.HomeFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/home_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                tools:src="@mipmap/ic_launcher"
                android:layout_marginBottom="20dp"
                app:shapeAppearanceOverlay="@style/roundedImageHome"
                />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/Home_Scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/container_image"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/container_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/layoutcorner_bg"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/double_margin"
            >
            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mi tienda"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textSize="30sp"
                android:layout_marginBottom="@dimen/double_margin"

                />
            <ImageView
                android:id="@+id/home_match_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:src="@drawable/ic_favorite_24"
                app:tint="@color/orange"
                android:contentDescription="@string/imagen_de_la_tienda"
                />
            <TextView
                android:id="@+id/home_match_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5"
                app:layout_constraintStart_toEndOf="@+id/home_match_image"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="@dimen/smallMargin"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                />

            <TextView
                android:id="@+id/home_label_dirección"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@id/home_address"
                app:layout_constraintTop_toBottomOf="@id/home_title"
                android:text="@string/text_label_direccion"
                android:textColor="@color/orange"
                />
            <TextView
                android:id="@+id/home_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/home_label_dirección"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/smallMargin"
                tools:text="Calle 20 #10-15 Bogotá"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/gray"
                />
            <TextView
                android:id="@+id/home_label_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/home_address"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/text_descripcion"
                android:textColor="@color/orange"
                />
            <TextView
                android:id="@+id/home_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_text"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_label_description"
                android:textColor="@color/gray"
                android:layout_marginTop="@dimen/smallMargin"
                />

<!--            <fragment-->
<!--                android:id="@+id/home_map"-->
<!--                android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="400dp"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/home_description"-->
<!--                android:layout_marginVertical="@dimen/default_margin"-->
<!--                android:layout_marginHorizontal="@dimen/small_margin"/>-->

<!--            <org.osmdroid.views.MapView-->
<!--                android:visibility="gone"-->
<!--                android:id="@+id/home_osm_map"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="400dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/home_map"-->
<!--                app:layout_constraintLeft_toLeftOf="parent"-->
<!--                app:layout_constraintRight_toRightOf="parent"-->
<!--                android:layout_margin="@dimen/default_margin"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>