<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddCommentFragment">.

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addComment_Constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/small_margin"
        >

        <TextView
            android:id="@+id/addComment_tindeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lemonada_bold"
            android:scaleType="centerCrop"
            android:text="@string/app_name"
            android:textColor="@color/teal_bold"
            android:textSize="50sp"
            app:layout_constraintTop_toTopOf="@+id/addComment_Constrain"
            app:layout_constraintStart_toStartOf="@+id/addComment_Constrain"
            app:layout_constraintEnd_toEndOf="@+id/addComment_Constrain"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addComment_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addComment_tindeo"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:hint="@string/titulo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addComment_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addComment_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addComment_title_layout"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:hint="Descripción"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addComment_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addComment_calificacion_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addComment_description_layout"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:hint="Calificación (1-5)"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addComment_calificacion_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addComment_id_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addComment_calificacion_layout"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/small_margin"
            android:hint="id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addComment_id_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number">
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_addComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/agregar_comentario"
            app:layout_constraintTop_toBottomOf="@+id/addComment_id_layout"
            app:layout_constraintStart_toStartOf="@+id/addComment_tindeo"
            app:layout_constraintEnd_toEndOf="@+id/addComment_tindeo"
            >
        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>